# interactive_theme_park_multi_agent

./: .gitignore  README.md  deploy.sh  docker-compose.yml  proxy.bat  start.py
doc/: design.md  manage_UI.md  tour_UI.md
lib/: aplaon.sql
manage_backend/: Dockerfile.prod  README.md  docker-compose.yml  env_example  main.py  requirements.txt  test_api.py  test_curl.sh
manage_backend/app/: config.py  db.py  deps.py  main.py  models.py  schemas.py
manage_frontend/: Dockerfile.prod  README.md  env_example
manage_frontend/app/: layout.tsx  page.tsx
manage_frontend/lib/: api.ts  auth.tsx  supabase.ts
manage_frontend_v2/: package.json
manage_frontend_v2/app/: globals.css  layout.tsx  page.tsx
manage_frontend_v2/lib/: api.ts  auth.ts
tour_backend/: Dockerfile  README.md  config.yaml  requirements.txt
tour_backend/backend/: README.md  env_template  server.py  start.sh
tour_backend/core/: connection.py
tour_backend/data/: .config.yaml.1  (+1 more)
tour_frontend/: README.md  index.html
xiaozhi-webui/: Dockerfile  Dockerfile.prod  LICENSE  README.md  nginx.conf  package.json  pnpm-lock.yaml
xiaozhi-webui/backend/: .dockerignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
xiaozhi-webui/backend/app/: config.py  constants.py
xiaozhi-webui/backend/app/proxy/: process_handler.py  websocket_proxy.py
xiaozhi-webui/backend/app/utils/: finder.py  logger.py  system_info.py
xiaozhi-webui/backend/config/: config.json  config_prod.json
xiaozhi_web/: .env  Dockerfile.prod  README.md  env_template  package-lock.json  package.json
(+111 files in other folders)
